# scikitlearn-deploy

./: .gitignore  README.md  form.yml  index.html  pyproject.toml  validation.py
.github/workflows/: main.yml
css/: about.033200ff.css  chunk-vendors.04a32bee.css  chunk-vendors.4e88ae7e.css
js/: about.277a2c55.js  about.277a2c55.js.map  about.77940d93.js  about.77940d93.js.map  about.e28857e8.js  about.e28857e8.js.map  app.3ec31ad5.js  app.3ec31ad5.js.map  app.64ee8924.js  app.64ee8924.js.map  app.79472628.js  app.79472628.js.map  app.9f6d81c5.js  app.9f6d81c5.js.map  app.a5aa6609.js  app.a5aa6609.js.map  app.cfdca2ba.js  app.cfdca2ba.js.map  chunk-vendors.2ba26031.js  chunk-vendors.2ba26031.js.map  chunk-vendors.e14590b4.js  chunk-vendors.e14590b4.js.map
sklearn_deploy/: app.py
tests/: test_sklearn_deploy.py
